--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="messages" ></div>
     <input id="message"/>
-    <button id="send">Send Message</button>
+    <button id="send">Send Messages</button>
     <script src="script.js"></script>
 </body>
 </html>
