always the same bug

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
     </form>
     </main>
     
-    <script src="script.js">  </script> 
+    <script src="scripts/script.js">  </script> 
   </body>
 </html>
 
