send message works

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
         <h1>Please sign in</h1>
 
         <div class="form-floating">
-        <input  id="email" placeholder="name@example.com">
+        <input  id="username" placeholder="Username">
         </div>
 
         <div>
